Improve slider performance and reliability Fix elements overlapping if slider is pulled outside of the viewport

--- a/Styles/PageLayout/Slider.css
+++ b/Styles/PageLayout/Slider.css
@@ -1,5 +1,5 @@
 :root {
-    --slider-w: 2vw;
+    --slider-w: 40px; /*! MUST BE IN PX */
 }
 
 
